@@ -1329,6 +1329,9 @@ Example : stat spell bob\n\r\
 Example : stat skill hassan\n\r\
 Example : stat chant hassan\n\r\
 Example : stat prayer hassan\n\r\
+Example : stat area midgaard\n\r\
+Example : stat item my longsword\n\r\
+Example : stat fountain\n\r\
 Short(s): \n\r\
 This command serves two purposes.  The first is to allow you to view \
 a usage statistics report on your mud.  Entering STAT alone allows you \
@@ -1336,9 +1339,10 @@ to see information gathered since midnight.  You may also enter a number \
 and a scale (days, weeks, months, or years) to view information going \
 farther back.\n\r\
 \n\r\
-STAT will also allow you to retreive basic stat information on a player \
-or mob in the game.  Entering STAT and the players name brings up the \
-most basic SCORE information.  Including a skill type before the name \
+STAT will also allow you to retreive basic stat information on a player, mob, \
+item, room, or exit in the game.  Entering STAT and the objects name brings up the \
+most basic information.  Specifying AREA, MOB, ITEM, ROOM, or EXIT before the name \
+will make the search more specific. Including a skill type before a mob or player name \
 will list their abilities of that type.  Valid skill types include: SKILL, \
 SPELL, PRAYER, SONG, TRAP, PROPERTY, "THIEF SKILL", LANGUAGE, CHANT, \
 "COMMON SKILL", DISEASE, POISON.  You can also get special reports by \
