@@ -1,5 +1,7 @@
 # Build 5.9.? Released ??/??/2016
    1. Follower behavior now has a few more options.
+   2. STAT [MOBNAME] will now give full editor stats also, and 
+   3. STAT [ITEMNAME/AREANAME/EXITNAME/ROOMNAME] now gives editor stats without editing
 
 # Build 5.9.2 Released 02/09/2016
    1. Apprentice now gets bonus common skill.
